# UdemyCmake

./: .gitignore  .gitmodules
2_CMake/00_CMake_project/: CMakeLists.txt  README.md
2_CMake/00_CMake_project/app/: CMakeLists.txt  main.cc
2_CMake/00_CMake_project/cmake/: AddGitSubmodule.cmake
2_CMake/00_CMake_project/configured/: config.hpp.in
2_CMake/00_CMake_project/src/: CMakeLists.txt
2_CMake/00_CMake_project/src/my_lib/: CMakeLists.txt  my_lib.cc
2_CMake/01_HelloWorld/: .gitmodules  CMakeLists.txt  Makefile  README.md  main.cc
2_CMake/01_HelloWorld/app/: main.cc
2_CMake/01_HelloWorld/configured/: config.hpp.in
2_CMake/01_HelloWorld/src/my_lib/: CMakeLists.txt  my_lib.cc
2_CMake/06_SourcesAndHeaders/: CMakeLists.txt
2_CMake/06_SourcesAndHeaders/app/: CMakeLists.txt  main.cc
2_CMake/06_SourcesAndHeaders/cmake/: AddGitSubmodule.cmake
2_CMake/07_ExternalGit/: CMakeLists.txt
2_CMake/07_ExternalGit/app/: main.cc
2_CMake/07_ExternalGit/src/my_lib/: CMakeLists.txt
